--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Infinite Scroll</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <h1>Infinite Scroll</h1>
         <div class="container"></div>
     </body>
     <script src="app.js"></script>
